tests-system/int-literals-3/output
T test1 { v = 5_ }
                ^ int-literals-3/foo.trlc:3: error: base 10 digit is required here
Processed 1 model and 1 requirement file and found 1 error
